feat: add get all stock movement endpoint
